data-access/spql-parser/2.2.0-3.10.1/src/main/java/org/gcube/dataaccess/spql/SPQLParser.java
// $ANTLR 3.5 /Users/lucio/imarineWPS/spql-parser/src/main/resources/SPQL.g 2013-08-01 14:41:37

package org.gcube.dataaccess.spql;
import java.util.List;
import java.util.ArrayList;
import java.util.Map;
import java.util.HashMap;
import org.gcube.dataaccess.spql.model.*;
import org.gcube.dataaccess.spql.model.where.*;
import org.gcube.dataaccess.spql.model.having.*;
import org.gcube.dataaccess.spql.model.ret.*;
import org.gcube.dataaccess.spql.model.error.SyntaxError;
import static org.gcube.dataaccess.spql.model.where.ConditionParameter.*;
import static org.gcube.dataaccess.spql.model.RelationalOperator.*;
import static org.gcube.dataaccess.spql.model.TermType.*;



import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

@SuppressWarnings("all")
public class SPQLParser extends Parser {
	public static final String[] tokenNames = new String[] {
		"<invalid>", "<EOR>", "<DOWN>", "<UP>", "AND", "AS", "COMMENT", "ESC_SEQ", 
		"EXL", "EXPAND", "EXPONENT", "FALSE", "FLOAT", "HAVING", "HEX_DIGIT", 
		"ID", "IN", "INT", "IS", "LUCIO", "NULL", "OCCURRENCE", "OCTAL_ESC", "PRODUCT", 
		"RESOLVE", "RETURN", "SEARCHBY", "STRING", "STRING_DOUBLE_QUOTE", "TAXON", 
		"TRUE", "UNFOLD", "UNICODE_ESC", "WHERE", "WITH", "WS", "XPATH", "'!'", 
		"'!='", "'%'", "'&&'", "'('", "')'", "'*'", "'+'", "'++'", "','", "'-'", 
		"'--'", "'.'", "'/'", "'<'", "'<='", "'='", "'=='", "'>'", "'>='", "'CN'", 
		"'CommonName'", "'SN'", "'ScientificName'", "'coordinate'", "'eventDate'", 
		"'||'"
	};
	public static final int EOF=-1;
	public static final int T__37=37;
	public static final int T__38=38;
	public static final int T__39=39;
	public static final int T__40=40;
	public static final int T__41=41;
	public static final int T__42=42;
	public static final int T__43=43;
	public static final int T__44=44;
	public static final int T__45=45;
	public static final int T__46=46;
	public static final int T__47=47;
	public static final int T__48=48;
	public static final int T__49=49;
	public static final int T__50=50;
	public static final int T__51=51;
	public static final int T__52=52;
	public static final int T__53=53;
	public static final int T__54=54;
	public static final int T__55=55;
	public static final int T__56=56;
	public static final int T__57=57;
	public static final int T__58=58;
	public static final int T__59=59;
	public static final int T__60=60;
	public static final int T__61=61;
	public static final int T__62=62;
	public static final int T__63=63;
	public static final int AND=4;
	public static final int AS=5;
	public static final int COMMENT=6;
	public static final int ESC_SEQ=7;
	public static final int EXL=8;
	public static final int EXPAND=9;
	public static final int EXPONENT=10;
	public static final int FALSE=11;
	public static final int FLOAT=12;
	public static final int HAVING=13;
	public static final int HEX_DIGIT=14;
	public static final int ID=15;
	public static final int IN=16;
	public static final int INT=17;
	public static final int IS=18;
	public static final int LUCIO=19;
	public static final int NULL=20;
	public static final int OCCURRENCE=21;
	public static final int OCTAL_ESC=22;
	public static final int PRODUCT=23;
	public static final int RESOLVE=24;
	public static final int RETURN=25;
	public static final int SEARCHBY=26;
	public static final int STRING=27;
	public static final int STRING_DOUBLE_QUOTE=28;
	public static final int TAXON=29;
	public static final int TRUE=30;
	public static final int UNFOLD=31;
	public static final int UNICODE_ESC=32;
	public static final int WHERE=33;
	public static final int WITH=34;
	public static final int WS=35;
	public static final int XPATH=36;

	// delegates
	public Parser[] getDelegates() {
		return new Parser[] {};
	}

	// delegators


	public SPQLParser(TokenStream input) {
		this(input, new RecognizerSharedState());
	}
	public SPQLParser(TokenStream input, RecognizerSharedState state) {
		super(input, state);
	}

	@Override public String[] getTokenNames() { return SPQLParser.tokenNames; }
	@Override public String getGrammarFileName() { return "/Users/lucio/imarineWPS/spql-parser/src/main/resources/SPQL.g"; }


	   /* @Override
	    public void reportError(RecognitionException e) throws RecognitionException {
	        throw e;
	    }*/
	    @Override
	      public void emitErrorMessage(String msg) {
	      throw new SyntaxError(msg);
	  }

	    
	    public Object recoverFromMismatchedSet(IntStream input, RecognitionException e, BitSet follow) throws RecognitionException
	    {
	      throw e;
	    }
	    
	    //disable re-sync
	    @Override
	  protected Object recoverFromMismatchedToken(IntStream input, int ttype, BitSet follow) throws RecognitionException
	  {
	    throw new MismatchedTokenException(ttype, input);
	  }
	  
	  protected void mismatch(IntStream input, int ttype, BitSet follow) throws RecognitionException
	  {
	    throw new MismatchedTokenException(ttype, input);
	   }
	  
	  
	  @Override
	  public void recover(IntStream input, RecognitionException re) {
	    throw new SyntaxError(re.getMessage());
	  }



	// $ANTLR start "query"
	// /Users/lucio/imarineWPS/spql-parser/src/main/resources/SPQL.g:78:1: query returns [Query result] : SEARCHBY t= terms ( IN d= datasources )? ( WHERE we= whereExpression )? ( RETURN rt= returnExpression )? ( HAVING he= havingExpression )? EOF ;
	public final Query query() throws RecognitionException {
		Query result = null;


		List<Term> t =null;
		List<String> d =null;
		List<Condition> we =null;
		ReturnType rt =null;
		HavingExpression he =null;

		try {
			// /Users/lucio/imarineWPS/spql-parser/src/main/resources/SPQL.g:78:30: ( SEARCHBY t= terms ( IN d= datasources )? ( WHERE we= whereExpression )? ( RETURN rt= returnExpression )? ( HAVING he= havingExpression )? EOF )
			// /Users/lucio/imarineWPS/spql-parser/src/main/resources/SPQL.g:78:32: SEARCHBY t= terms ( IN d= datasources )? ( WHERE we= whereExpression )? ( RETURN rt= returnExpression )? ( HAVING he= havingExpression )? EOF
			{
			result = new Query();
			match(input,SEARCHBY,FOLLOW_SEARCHBY_in_query65); 
			pushFollow(FOLLOW_terms_in_query69);
			t=terms();
			state._fsp--;

			result.setTerms(t);
			// /Users/lucio/imarineWPS/spql-parser/src/main/resources/SPQL.g:80:7: ( IN d= datasources )?
			int alt1=2;
			int LA1_0 = input.LA(1);
			if ( (LA1_0==IN) ) {
				alt1=1;
			}
			switch (alt1) {
				case 1 :
					// /Users/lucio/imarineWPS/spql-parser/src/main/resources/SPQL.g:80:8: IN d= datasources
					{
					match(input,IN,FOLLOW_IN_in_query81); 
					pushFollow(FOLLOW_datasources_in_query85);
					d=datasources();
					state._fsp--;

					result.setDatasources(d);
					}
					break;

			}

			// /Users/lucio/imarineWPS/spql-parser/src/main/resources/SPQL.g:81:7: ( WHERE we= whereExpression )?
			int alt2=2;
			int LA2_0 = input.LA(1);
			if ( (LA2_0==WHERE) ) {
				alt2=1;
			}
			switch (alt2) {
				case 1 :
					// /Users/lucio/imarineWPS/spql-parser/src/main/resources/SPQL.g:81:8: WHERE we= whereExpression
					{
					match(input,WHERE,FOLLOW_WHERE_in_query99); 
					pushFollow(FOLLOW_whereExpression_in_query103);
					we=whereExpression();
					state._fsp--;

					result.setWhereExpression(new WhereExpression(we));
					}
					break;

			}

			// /Users/lucio/imarineWPS/spql-parser/src/main/resources/SPQL.g:82:7: ( RETURN rt= returnExpression )?
			int alt3=2;
			int LA3_0 = input.LA(1);
			if ( (LA3_0==RETURN) ) {
				alt3=1;
			}
			switch (alt3) {
				case 1 :
					// /Users/lucio/imarineWPS/spql-parser/src/main/resources/SPQL.g:82:8: RETURN rt= returnExpression
					{
					match(input,RETURN,FOLLOW_RETURN_in_query117); 
					pushFollow(FOLLOW_returnExpression_in_query121);
					rt=returnExpression();
					state._fsp--;

					result.setReturnType(rt);
					}
					break;

			}

			// /Users/lucio/imarineWPS/spql-parser/src/main/resources/SPQL.g:83:7: ( HAVING he= havingExpression )?
			int alt4=2;
			int LA4_0 = input.LA(1);
			if ( (LA4_0==HAVING) ) {
				alt4=1;
			}
			switch (alt4) {
				case 1 :
					// /Users/lucio/imarineWPS/spql-parser/src/main/resources/SPQL.g:83:8: HAVING he= havingExpression
					{
					match(input,HAVING,FOLLOW_HAVING_in_query134); 
					pushFollow(FOLLOW_havingExpression_in_query138);
					he=havingExpression();
					state._fsp--;

					result.setHavingExpression(he);
					}
					break;

			}

			match(input,EOF,FOLLOW_EOF_in_query150); 
			}

		}

		  catch (RecognitionException exception) {
		    throw exception;
		  }

		finally {
			// do for sure before leaving
		}
		return result;
	}
	// $ANTLR end "query"



	// $ANTLR start "terms"
	// /Users/lucio/imarineWPS/spql-parser/src/main/resources/SPQL.g:87:1: terms returns [List<Term> terms] :t= term ( ',' t= term )* ;
	public final List<Term> terms() throws RecognitionException {
		List<Term> terms = null;


		Term t =null;

		try {
			// /Users/lucio/imarineWPS/spql-parser/src/main/resources/SPQL.g:87:34: (t= term ( ',' t= term )* )
			// /Users/lucio/imarineWPS/spql-parser/src/main/resources/SPQL.g:87:36: t= term ( ',' t= term )*
			{
			terms = new ArrayList<Term>();
			pushFollow(FOLLOW_term_in_terms185);
			t=term();
			state._fsp--;

			terms.add(t);
			// /Users/lucio/imarineWPS/spql-parser/src/main/resources/SPQL.g:88:37: ( ',' t= term )*
			loop5:
			while (true) {
				int alt5=2;
				int LA5_0 = input.LA(1);
				if ( (LA5_0==46) ) {
					alt5=1;
				}

				switch (alt5) {
				case 1 :
					// /Users/lucio/imarineWPS/spql-parser/src/main/resources/SPQL.g:88:38: ',' t= term
					{
					match(input,46,FOLLOW_46_in_terms190); 
					pushFollow(FOLLOW_term_in_terms194);
					t=term();
					state._fsp--;

					terms.add(t);
					}
					break;

				default :
					break loop5;
				}
			}

			}

		}

		  catch (RecognitionException exception) {
		    throw exception;
		  }

		finally {
			// do for sure before leaving
		}
		return terms;
	}
	// $ANTLR end "terms"



	// $ANTLR start "term"
	// /Users/lucio/imarineWPS/spql-parser/src/main/resources/SPQL.g:90:1: term returns [Term term] : (t= scientificTerms |t= commonNameTerms );
	public final Term term() throws RecognitionException {
		Term term = null;


		Term t =null;

		try {
			// /Users/lucio/imarineWPS/spql-parser/src/main/resources/SPQL.g:90:25: (t= scientificTerms |t= commonNameTerms )
			int alt6=2;
			int LA6_0 = input.LA(1);
			if ( ((LA6_0 >= 59 && LA6_0 <= 60)) ) {
				alt6=1;
			}
			else if ( ((LA6_0 >= 57 && LA6_0 <= 58)) ) {
				alt6=2;
			}

			else {
				NoViableAltException nvae =
					new NoViableAltException("", 6, 0, input);
				throw nvae;
			}

			switch (alt6) {
				case 1 :
					// /Users/lucio/imarineWPS/spql-parser/src/main/resources/SPQL.g:90:27: t= scientificTerms
					{
					pushFollow(FOLLOW_scientificTerms_in_term217);
					t=scientificTerms();
					state._fsp--;

					term = t;
					}
					break;
				case 2 :
					// /Users/lucio/imarineWPS/spql-parser/src/main/resources/SPQL.g:90:60: t= commonNameTerms
					{
					pushFollow(FOLLOW_commonNameTerms_in_term225);
					t=commonNameTerms();
					state._fsp--;

					term = t;
					}
					break;

			}
		}

		  catch (RecognitionException exception) {
		    throw exception;
		  }

		finally {
			// do for sure before leaving
		}
		return term;
	}
	// $ANTLR end "term"



	// $ANTLR start "scientificTerms"
	// /Users/lucio/imarineWPS/spql-parser/src/main/resources/SPQL.g:92:1: scientificTerms returns [Term term] : ( 'ScientificName' | 'SN' ) w= words (u= unfoldClause )? (e= expandClause )? ;
	public final Term scientificTerms() throws RecognitionException {
		Term term = null;


		List<String> w =null;
		UnfoldClause u =null;
		ExpandClause e =null;

		try {
			// /Users/lucio/imarineWPS/spql-parser/src/main/resources/SPQL.g:92:36: ( ( 'ScientificName' | 'SN' ) w= words (u= unfoldClause )? (e= expandClause )? )
			// /Users/lucio/imarineWPS/spql-parser/src/main/resources/SPQL.g:92:38: ( 'ScientificName' | 'SN' ) w= words (u= unfoldClause )? (e= expandClause )?
			{
			term = new Term(SCIENTIFIC_NAME);
			if ( (input.LA(1) >= 59 && input.LA(1) <= 60) ) {
				input.consume();
				state.errorRecovery=false;
			}
			else {
				MismatchedSetException mse = new MismatchedSetException(null,input);
				throw mse;
			}
			pushFollow(FOLLOW_words_in_scientificTerms249);
			w=words();
			state._fsp--;

			term.setWords(w);
			// /Users/lucio/imarineWPS/spql-parser/src/main/resources/SPQL.g:93:61: (u= unfoldClause )?
			int alt7=2;
			int LA7_0 = input.LA(1);
			if ( (LA7_0==UNFOLD) ) {
				alt7=1;
			}
			switch (alt7) {
				case 1 :
					// /Users/lucio/imarineWPS/spql-parser/src/main/resources/SPQL.g:93:62: u= unfoldClause
					{
					pushFollow(FOLLOW_unfoldClause_in_scientificTerms256);
					u=unfoldClause();
					state._fsp--;

					term.setUnfoldClause(u);
					}
					break;

			}

			// /Users/lucio/imarineWPS/spql-parser/src/main/resources/SPQL.g:93:115: (e= expandClause )?
			int alt8=2;
			int LA8_0 = input.LA(1);
			if ( (LA8_0==EXPAND) ) {
				alt8=1;
			}
			switch (alt8) {
				case 1 :
					// /Users/lucio/imarineWPS/spql-parser/src/main/resources/SPQL.g:93:116: e= expandClause
					{
					pushFollow(FOLLOW_expandClause_in_scientificTerms265);
					e=expandClause();
					state._fsp--;

					term.setExpandClause(e);
					}
					break;

			}

			}

		}

		  catch (RecognitionException exception) {
		    throw exception;
		  }

		finally {
			// do for sure before leaving
		}
		return term;
	}
	// $ANTLR end "scientificTerms"



	// $ANTLR start "commonNameTerms"
	// /Users/lucio/imarineWPS/spql-parser/src/main/resources/SPQL.g:95:1: commonNameTerms returns [Term term] : ( 'CommonName' | 'CN' ) w= words (r= resolveClause ) (e= expandClause )? ;
	public final Term commonNameTerms() throws RecognitionException {
		Term term = null;


		List<String> w =null;
		ResolveClause r =null;
		ExpandClause e =null;

		try {
			// /Users/lucio/imarineWPS/spql-parser/src/main/resources/SPQL.g:95:36: ( ( 'CommonName' | 'CN' ) w= words (r= resolveClause ) (e= expandClause )? )
			// /Users/lucio/imarineWPS/spql-parser/src/main/resources/SPQL.g:95:38: ( 'CommonName' | 'CN' ) w= words (r= resolveClause ) (e= expandClause )?
			{
			term = new Term(COMMON_NAME);
			if ( (input.LA(1) >= 57 && input.LA(1) <= 58) ) {
				input.consume();
				state.errorRecovery=false;
			}
			else {
				MismatchedSetException mse = new MismatchedSetException(null,input);
				throw mse;
			}
			pushFollow(FOLLOW_words_in_commonNameTerms294);
			w=words();
			state._fsp--;

			term.setWords(w);
			// /Users/lucio/imarineWPS/spql-parser/src/main/resources/SPQL.g:96:57: (r= resolveClause )
			// /Users/lucio/imarineWPS/spql-parser/src/main/resources/SPQL.g:96:58: r= resolveClause
			{
			pushFollow(FOLLOW_resolveClause_in_commonNameTerms301);
			r=resolveClause();
			state._fsp--;

			term.setResolveClause(r);
			}

			// /Users/lucio/imarineWPS/spql-parser/src/main/resources/SPQL.g:96:112: (e= expandClause )?
			int alt9=2;
			int LA9_0 = input.LA(1);
			if ( (LA9_0==EXPAND) ) {
				alt9=1;
			}
			switch (alt9) {
				case 1 :
					// /Users/lucio/imarineWPS/spql-parser/src/main/resources/SPQL.g:96:113: e= expandClause
					{
					pushFollow(FOLLOW_expandClause_in_commonNameTerms309);
					e=expandClause();
					state._fsp--;

					term.setExpandClause(e);
					}
					break;

			}

			}

		}

		  catch (RecognitionException exception) {
		    throw exception;
		  }

		finally {
			// do for sure before leaving
		}
		return term;
	}
	// $ANTLR end "commonNameTerms"



	// $ANTLR start "words"
	// /Users/lucio/imarineWPS/spql-parser/src/main/resources/SPQL.g:98:1: words returns [List<String> words] :w= word ( ',' w= word )* ;
	public final List<String> words() throws RecognitionException {
		List<String> words = null;


		String w =null;

		try {
			// /Users/lucio/imarineWPS/spql-parser/src/main/resources/SPQL.g:98:36: (w= word ( ',' w= word )* )
			// /Users/lucio/imarineWPS/spql-parser/src/main/resources/SPQL.g:98:38: w= word ( ',' w= word )*
			{
			words = new ArrayList();
			pushFollow(FOLLOW_word_in_words331);
			w=word();
			state._fsp--;

			words.add(w);
			// /Users/lucio/imarineWPS/spql-parser/src/main/resources/SPQL.g:99:33: ( ',' w= word )*
			loop10:
			while (true) {
				int alt10=2;
				int LA10_0 = input.LA(1);
				if ( (LA10_0==46) ) {
					int LA10_2 = input.LA(2);
					if ( (LA10_2==STRING) ) {
						alt10=1;
					}

				}

				switch (alt10) {
				case 1 :
					// /Users/lucio/imarineWPS/spql-parser/src/main/resources/SPQL.g:99:34: ',' w= word
					{
					match(input,46,FOLLOW_46_in_words336); 
					pushFollow(FOLLOW_word_in_words340);
					w=word();
					state._fsp--;

					words.add(w);
					}
					break;

				default :
					break loop10;
				}
			}

			}

		}

		  catch (RecognitionException exception) {
		    throw exception;
		  }

		finally {
			// do for sure before leaving
		}
		return words;
	}
	// $ANTLR end "words"



	// $ANTLR start "word"
	// /Users/lucio/imarineWPS/spql-parser/src/main/resources/SPQL.g:101:1: word returns [String word] : STRING ;
	public final String word() throws RecognitionException {
		String word = null;


		Token STRING1=null;

		try {
			// /Users/lucio/imarineWPS/spql-parser/src/main/resources/SPQL.g:101:28: ( STRING )
			// /Users/lucio/imarineWPS/spql-parser/src/main/resources/SPQL.g:101:30: STRING
			{
			STRING1=(Token)match(input,STRING,FOLLOW_STRING_in_word358); 
			word = (STRING1!=null?STRING1.getText():null).substring(1,(STRING1!=null?STRING1.getText():null).length()-1);
			}

		}

		  catch (RecognitionException exception) {
		    throw exception;
		  }

		finally {
			// do for sure before leaving
		}
		return word;
	}
	// $ANTLR end "word"



	// $ANTLR start "unfoldClause"
	// /Users/lucio/imarineWPS/spql-parser/src/main/resources/SPQL.g:103:1: unfoldClause returns [UnfoldClause clause] : UNFOLD WITH d= datasource ;
	public final UnfoldClause unfoldClause() throws RecognitionException {
		UnfoldClause clause = null;


		String d =null;

		try {
			// /Users/lucio/imarineWPS/spql-parser/src/main/resources/SPQL.g:103:43: ( UNFOLD WITH d= datasource )
			// /Users/lucio/imarineWPS/spql-parser/src/main/resources/SPQL.g:103:45: UNFOLD WITH d= datasource
			{
			clause = new UnfoldClause();
			match(input,UNFOLD,FOLLOW_UNFOLD_in_unfoldClause382); 
			match(input,WITH,FOLLOW_WITH_in_unfoldClause384); 
			pushFollow(FOLLOW_datasource_in_unfoldClause388);
			d=datasource();
			state._fsp--;

			clause.setDatasource(d);
			}

		}

		  catch (RecognitionException exception) {
		    throw exception;
		  }

		finally {
			// do for sure before leaving
		}
		return clause;
	}
	// $ANTLR end "unfoldClause"



	// $ANTLR start "expandClause"
	// /Users/lucio/imarineWPS/spql-parser/src/main/resources/SPQL.g:106:1: expandClause returns [ExpandClause clause] : EXPAND ( WITH d= datasources )? ;
	public final ExpandClause expandClause() throws RecognitionException {
		ExpandClause clause = null;


		List<String> d =null;

		try {
			// /Users/lucio/imarineWPS/spql-parser/src/main/resources/SPQL.g:106:43: ( EXPAND ( WITH d= datasources )? )
			// /Users/lucio/imarineWPS/spql-parser/src/main/resources/SPQL.g:106:45: EXPAND ( WITH d= datasources )?
			{
			clause = new ExpandClause();
			match(input,EXPAND,FOLLOW_EXPAND_in_expandClause419); 
			// /Users/lucio/imarineWPS/spql-parser/src/main/resources/SPQL.g:107:22: ( WITH d= datasources )?
			int alt11=2;
			int LA11_0 = input.LA(1);
			if ( (LA11_0==WITH) ) {
				alt11=1;
			}
			switch (alt11) {
				case 1 :
					// /Users/lucio/imarineWPS/spql-parser/src/main/resources/SPQL.g:107:23: WITH d= datasources
					{
					match(input,WITH,FOLLOW_WITH_in_expandClause422); 
					pushFollow(FOLLOW_datasources_in_expandClause426);
					d=datasources();
					state._fsp--;

					clause.setDatasources(d);
					}
					break;

			}

			}

		}

		  catch (RecognitionException exception) {
		    throw exception;
		  }

		finally {
			// do for sure before leaving
		}
		return clause;
	}
	// $ANTLR end "expandClause"



	// $ANTLR start "resolveClause"
	// /Users/lucio/imarineWPS/spql-parser/src/main/resources/SPQL.g:109:1: resolveClause returns [ResolveClause clause] : RESOLVE ( WITH d= datasources )? ;
	public final ResolveClause resolveClause() throws RecognitionException {
		ResolveClause clause = null;


		List<String> d =null;

		try {
			// /Users/lucio/imarineWPS/spql-parser/src/main/resources/SPQL.g:109:45: ( RESOLVE ( WITH d= datasources )? )
			// /Users/lucio/imarineWPS/spql-parser/src/main/resources/SPQL.g:109:47: RESOLVE ( WITH d= datasources )?
			{
			clause = new ResolveClause();
			match(input,RESOLVE,FOLLOW_RESOLVE_in_resolveClause460); 
			// /Users/lucio/imarineWPS/spql-parser/src/main/resources/SPQL.g:110:23: ( WITH d= datasources )?
			int alt12=2;
			int LA12_0 = input.LA(1);
			if ( (LA12_0==WITH) ) {
				alt12=1;
			}
			switch (alt12) {
				case 1 :
					// /Users/lucio/imarineWPS/spql-parser/src/main/resources/SPQL.g:110:24: WITH d= datasources
					{
					match(input,WITH,FOLLOW_WITH_in_resolveClause463); 
					pushFollow(FOLLOW_datasources_in_resolveClause467);
					d=datasources();
					state._fsp--;

					clause.setDatasources(d);
					}
					break;

			}

			}

		}
